--- a/src/Projects.css
+++ b/src/Projects.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .ParticleCanvas {
@@ -30,6 +30,7 @@ a:hover{
     border-radius: 10px;
     margin: 10px;
     z-index: 100;
+    align-self: top;
 }
 
 .ParticleCanvas {
